<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutHistoryContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_bg"
    android:orientation="vertical"
    android:paddingStart="@dimen/app_gutter"
    android:paddingTop="@dimen/content_padding_top"
    android:paddingEnd="@dimen/app_gutter"
    android:paddingBottom="@dimen/content_padding_bottom">

    <TextView
        android:id="@+id/txtHistoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_title"
        android:textColor="@color/md_text"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtHistoryHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/status_top_margin"
        android:text="@string/history_hint"
        android:textColor="@color/md_text_dim"
        android:textSize="@dimen/status_text_size" />

    <TextView
        android:id="@+id/txtHistoryEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/history_empty_top_margin"
        android:gravity="center"
        android:text="@string/history_empty"
        android:textColor="@color/md_text_dim"
        android:textSize="@dimen/status_text_size" />

    <ScrollView
        android:id="@+id/scrollHistory"
        android:layout_width="match_parent"
        android:layout_height="@dimen/weighted_child_width"
        android:layout_marginTop="@dimen/card_top_margin"
        android:layout_weight="1"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/layoutHistoryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClearHistory"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_top_margin"
        android:text="@string/action_clear_history"
        app:cornerRadius="@dimen/button_corner_radius" />

</LinearLayout>
